Разметка главной страницы
Разделы новые игры и избранное, подвал

--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,9 @@
-/* Fonts */
 
-@font-face {
-  font-family: "PT Sans";
-  src: url("../fonts/PTSans.woff2") format("woff2"),
-  url("../fonts/PTSans.woff") format("woff");
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "PT Sans";
-  src: url("../fonts/PTSans-Bold.woff2") format("woff2"),
-  url("../fonts/PTSans-Bold.woff") format("woff");
-  font-weight: 700;
-  font-style: normal;
-}
-
-/* Variables */
-
-:root {
-  --basic-black: #000000;
-  --basic-white: #ffffff;
-
-}
 
 /* Global */
 
-.page-body {
-  min-width: 1280px;
+body {
+  min-width: 980px;
   min-height: 100%;
   margin: 0;
   padding: 0;
