--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,309 @@
-
-
 /* Global */
 
 body {
-  min-width: 980px;
   min-height: 100%;
   margin: 0;
+  padding: 0;
+}
+
+h1, h3 {
+  margin: 0;
+}
+
+p {
+  margin: 0;
+}
+
+img {
+  max-width: 100%;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+a {
+ text-decoration: none;
+ color: #04048d;
+}
+
+.button {
+  padding: 3px 5px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 21px;
+  color: #ffffff;
+  text-align: center;
+  vertical-align: middle;
+  text-transform: uppercase;
+  background-color: #04048d;
+  border-radius: 15px;
+  border: none;
+  cursor: pointer;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.wrapper {
+  width: 1200px;
+  height: 100%;
+  margin: 0 auto;
   padding: 0;
   font-family: "PT Sans", Arial, sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 14px;
   line-height: 26px;
-  color: var(--basic-black);
+  color: #04048d;
   display: grid;
   grid-template-rows: min-content 1fr min-content;
   text-align: center;
   text-transform: uppercase;
-  background-color: var(--basic-grey-light);
+  background-color: #ffffd6;
+}
+
+/*** HEADER ***/
+
+.header {
+}
+
+.main-navigation {
+  margin-top: 25px;
+  display: grid;
+  grid-template-columns: 10% auto 10%;
+}
+ 
+.main-header-logo img {
+  border: 2px solid transparent;
+  border-radius: 50%;
+}
+
+.site-navigation {
+  margin-left: 280px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+}
+
+.column-menu {
+  margin: 0 20px;
+}
+
+.user-navigation {
+}
+
+.login-link {
+
+}
+
+/*** MAIN PAGE ***/
+
+.main-container {
+  padding: 0 50px;
+}
+
+/* Slaider */
+
+.slider {
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+.slider-list {
+  
+}
+
+.slider-list .slider-item {
+  display: none;
+}
+
+.slider-list .slider-current {
+  display: block;
+}
+
+.slider-item .slide {
+
+}
+
+.slide img {
+  border: 2px solid transparent;
+  border-radius: 15px;
+  cursor: default;
+}
+
+.slider-controls {
+  margin-top: -40px;
+}
+
+.slider-controls button {
+  margin: 0 5px;
+  padding: 0;
+  width: 17px;
+  height: 17px;
+  background-color: transparent;
+  border: 2px solid #ffffff;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.slider-controls .current-control {
+  background-color: #ffffff;
+}
+
+/* Catalog */
+
+.catalog {
+  display: grid;
+}
+
+.catalog-list {
+  margin: 20px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.catalog-list .catalog-game {
+  width: 150px;
+  margin-bottom: 10px;
+  margin-right: 30px;
+  display: flex;
+  flex-direction: column;
+  text-align: start;
+}
+
+.catalog-game:nth-child(6n) {
+  margin-right: 0;
+}
+
+.catalog-game a {
+  display: flex;
+  flex-direction: column;
+}
+
+.catalog-game-title {
+  margin-top: 5px;
+  order: 1;
+  font-size: 16px;
+  line-height: 21px;
+}
+
+.catalog-game-image {
+  border: 1px solid transparent;
+  border-radius: 15px;
+  object-fit: contain;
+}
+
+.catalog-game-tags {
+  font-size: 14px;
+  line-height: 16px;
+  font-weight: 400;
+  text-transform: none;
+}
+
+.catalog-game-autor {
+  padding: 5px 0;
+  font-size: 14px;
+  line-height: 16px;
+  font-weight: 400;
+  text-transform: none;
+  display: flex;
+  align-items: center;
+}
+
+.catalog-game-autor img {
+  width: 20px;
+  border: 1px solid transparent;
+  border-radius: 50%;
+}
+
+.catalog-game-autor p {
+  padding-left: 5px;
+}
+
+.navigation-buttons {
+  display: flex;
+}
+
+.navigation-buttons button {
+  width: 66%;
+  margin-right: 10px;
+}
+
+.navigation-buttons a {
+  width: 33%;
+}
+
+/* New games */
+
+.new-games {
+  /* outline: 2px solid #0000ff; */
+}
+
+.new-games h2 {
+  text-align: start;
+  /* outline: 2px solid #0000ff; */
+}
+
+.button-new-games {
+  width: 100%;
+}
+
+/* Favourites games */
+
+.favourites-games {
+  /* outline: 2px solid #0000ff; */
+}
+
+.favourites-games h2 {
+  text-align: start;
+  /* outline: 2px solid #0000ff; */
+}
+
+.navigation-buttons button {
+  width: 66%;
+  margin-right: 10px;
+}
+
+.navigation-buttons a {
+  width: 33%;
+}
+
+/*** FOOTER ***/
+
+.main-footer {
+
+}
+
+.footer-container {
+
+}
+
+.footer-menu {
+
+}
+
+.footer-menu-item {
+
+}
+
+.footer-payment {
+
+}
+
+.footer-contacts {
+
 }
