--- a/css/style.css
+++ b/css/style.css
@@ -371,3 +371,11 @@ a {
   font-size: 18px;
   font-style: italic;
 }
+
+/*** ADAPTATION ***/
+
+@media (max-width: 960px) {
+  .wrapper {
+    /* width: 960px; */
+  }
+}
