--- a/css/style.css
+++ b/css/style.css
@@ -70,8 +70,8 @@ a {
   color: #04048d;
   display: grid;
   grid-template-rows: min-content 1fr min-content;
-  
   text-transform: uppercase;
+  background-image: url(../img/background/1.png);
 }
 
 .main-container {
