--- a/css/style.css
+++ b/css/style.css
@@ -87,10 +87,18 @@ a {
 
 /*** HEADER ***/
 
+.header {
+  margin: 0 5px;
+  padding: 25px 0;
+  border-bottom: 2px solid #04048d;
+  background-image: url(../img/background/1.png);
+  background-clip: border-box;
+}
+
 .main-navigation {
-  margin-top: 25px;
   display: grid;
   grid-template-columns: 10% auto 10%;
+  align-items: center;
 }
 
 .main-header-logo {
@@ -110,6 +118,11 @@ a {
 
 .column-menu {
   margin: 0 20px;
+  padding: 0 30px;
+  background-color: #eeeeee;
+  border: 2px solid #ffffff;
+  /* border-radius: 100px; */
+  border-radius: 15px 100px 15px 100px;
 }
 
 .user-navigation {
@@ -122,7 +135,7 @@ a {
 /* Slaider */
 
 .slider {
-  margin-top: 10px;
+  margin-top: 35px;
   margin-bottom: 20px;
   text-align: center;
 }
